# blob_tracking

./: .gitignore  CMakeLists.txt  README.md
data/: night2_output.csv
src/: blob.cpp  main.cpp
src/include/: blob.hpp  event.hpp
src/utility/: clean_csv.py
